--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -386,6 +386,10 @@
     padding: 0.5rem 0.25rem;
   }
 
+  .sectionWhite-left {
+    padding-left: unset !important;
+  }
+
   .sectionWhite .get-started-button {
     padding: 0.75rem 3.5rem;
   }
